// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RelativeTime > should allow to put custom content in the default slot 1`] = `
<time
  class="dusk-relative-time"
  datetime="2024-05-20T15:25:10.000Z"
>
  <span>
    The relative time now is 
    32 seconds ago
  </span>
  
</time>
`;

exports[`RelativeTime > should pass additional class names and attributes to the rendered element 1`] = `
<time
  class="dusk-relative-time foo bar"
  data-baz="baz"
  datetime="2024-05-20T15:25:10.000Z"
>
  30 seconds ago
</time>
`;

exports[`RelativeTime > should render the relative time of the given date and should not updated it by default 1`] = `
<time
  class="dusk-relative-time"
  datetime="2024-05-20T15:25:10.000Z"
>
  20 seconds ago
</time>
`;
